<resources>
    <string name="app_name">StudentManage</string>
    <string name="head">头像：</string>
    <string name="student_id">学号：</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="phone">联系电话：</string>
    <string name="address">家庭住址：</string>
    <string name="department">院系：</string>
    <string name="major">专业：</string>
    <string name="grade">年级：</string>
    <string name="classes">班级：</string>
    <string name="political_status">政治面目：</string>
    <string name="student_enrollment_date">入学日期：</string>
    <string name="state">状态：</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_address">请输入地址</string>
    <string name="login">登录</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="manager">管理员</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="indicator_manage">管理</string>
    <string name="indicator_course">课程</string>
    <string name="indicator_personal">个人</string>
    <string name="phone_pattern_error">手机号码格式错误，请重新输入</string>
    <string name="insert_success">添加成功</string>
    <string name="update_success">更新成功</string>
    <string name="please_input_all_info">请填写完全部信息</string>
    <string name="auto_generate">自动生成</string>
    <string name="password">密码：</string>
    <string name="input_name">请输入姓名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="select_department">请选择院系</string>
    <string name="select_major">请选择专业</string>
    <string name="input_grade">请输入年级</string>
    <string name="select_class">请选择班级</string>
    <string name="input_political_status">请输入政治面目</string>
    <string name="nationality">民族：</string>
    <string name="input_nationality">请输入民族</string>
    <string name="input_student_enrollment_date">请输入入学日期</string>
    <string name="add">添加</string>
    <string name="teacher_id">工号：</string>
    <string name="reset_password">重置为1234</string>
    <string name="identity">职务：</string>
    <string name="input_identity">请输入职务</string>
    <string name="teacher_enrollment_date">入职日期：</string>
    <string name="input_teacher_enrollment_date">请输入入职日期</string>
    <string name="class_id">班级编号：</string>
    <string name="class_name">班级名称：</string>
    <string name="input_class_name">请输入班级名称</string>
    <string name="update">确定修改</string>
    <string name="course_name">课程名：</string>
    <string name="course_department">开课学院：</string>
    <string name="introduction">介绍：</string>
    <string name="class_time">上课时间：</string>
    <string name="course_teacher">任课教师：</string>
    <string name="credit">学分：</string>
    <string name="daily_score">平时成绩：</string>
    <string name="exam_score">期末成绩：</string>
    <string name="final_score">总成绩：</string>
    <string name="final_credit">所得学分：</string>
    <string name="complete_state">完成状况：</string>
    <string name="major_id">专业编号：</string>
    <string name="input_major">请输入专业名称</string>
    <string name="major_introduction">专业简介：</string>
    <string name="input_major_introduction">请输入专业简介</string>
</resources>
