<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical"
    tools:context="com.ytempest.studentmanage.activity.InsertStudentActivity">

    <LinearLayout
        style="@style/common_row_container_style"
        android:layout_marginTop="1dp">

        <TextView
            style="@style/common_row_title_tv_style"
            android:text="@string/class_id" />

        <EditText
            android:id="@+id/et_class_id"
            style="@style/common_row_content_et_style"
            android:layout_marginRight="22dp"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        style="@style/common_row_container_style"
        android:layout_marginTop="1dp">

        <TextView
            style="@style/common_row_title_tv_style"
            android:text="@string/class_name" />

        <EditText
            android:id="@+id/et_class_name"
            style="@style/common_row_content_et_style"
            android:hint="@string/input_class_name" />


        <ImageView style="@style/common_row_right_arrow_iv_style" />
    </LinearLayout>

    <LinearLayout
        style="@style/common_row_container_style"
        android:layout_marginTop="1dp">

        <TextView
            style="@style/common_row_title_tv_style"
            android:text="@string/grade" />


        <EditText
            android:id="@+id/et_class_grade"
            style="@style/common_row_content_et_style"
            android:hint="@string/input_grade"
            android:inputType="number" />

        <ImageView style="@style/common_row_right_arrow_iv_style" />
    </LinearLayout>

    <LinearLayout
        style="@style/common_row_container_style"
        android:layout_marginTop="1dp">

        <TextView
            style="@style/common_row_title_tv_style"
            android:text="@string/department" />

        <TextView
            android:id="@+id/tv_class_department"
            style="@style/common_row_content_et_style"
            android:hint="@string/select_department" />

        <ImageView style="@style/common_row_right_arrow_iv_style" />
    </LinearLayout>


    <LinearLayout
        style="@style/common_row_container_style"
        android:layout_marginTop="1dp">

        <TextView
            style="@style/common_row_title_tv_style"
            android:text="@string/major" />

        <TextView
            android:id="@+id/tv_class_major"
            style="@style/common_row_content_et_style"
            android:hint="@string/select_major" />

        <ImageView style="@style/common_row_right_arrow_iv_style" />
    </LinearLayout>


    <Button
        android:id="@+id/bt_class_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/selector_green_button_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/update"
        android:textColor="#FFF"
        android:textSize="20sp" />
</LinearLayout>

